rholang-tree-sitter/test/corpus/sequential_send.txt
================
Sequential send
================

new chan, ack, stdoutAck(`rho:io:stdoutAck`) in {
  chan!(0) |
  for (_ <- ack) {
    chan!(1)
  } |
  for (@num <= chan) {
    stdoutAck!(num, *ack)
  }
}

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      (par
        (par
          (send
            channel: (var)
            send_type: (send_single)
            inputs: (send_inputs
              data: (send_data
                (long_literal))))
          (input
            receipts: (receipts
              (receipt
                (linear_bind
                  names: (names
                    (wildcard))
                  input: (simple_source
                    (var)))))
            proc: (block
              (send
                channel: (var)
                send_type: (send_single)
                inputs: (send_inputs
                  data: (send_data
                    (long_literal)))))))
        (input
          receipts: (receipts
            (receipt
              (repeated_bind
                names: (names
                  (quote
                    (var)))
                input: (var))))
          proc: (block
            (send
              channel: (var)
              send_type: (send_single)
              inputs: (send_inputs
                data: (send_data
                  (var)
                  (eval
                    (var)))))))))))
